fix(Text): Added option for alignment

--- a/src/text/text.pcss
+++ b/src/text/text.pcss
@@ -58,6 +58,11 @@
 		}
 	}
 
+	&--center
+	{
+		text-align: center;
+	}
+
 	&--dark
 	{
 		color: #111;
@@ -134,6 +139,11 @@
 		display: inline;
 	}
 
+	&--left
+	{
+		text-align: left;
+	}
+
 	&--light
 	{
 		color: #fff;
@@ -154,6 +164,11 @@
 			size: convertTypographyUnitsToRem( 10 );
 			weight: 400;
 		}
+	}
+
+	&--right
+	{
+		text-align: right;
 	}
 
 	&--subtitle1
